feat(championship-rankings): Enhance ranking logic with tier prioritization and logging